# glfilebrowser

./: CImg.h  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  main.cpp
